--- a/templates/nested/amazon-eks/templates/amazon-eks-entrypoint-existing-vpc.template.yaml
+++ b/templates/nested/amazon-eks/templates/amazon-eks-entrypoint-existing-vpc.template.yaml
@@ -180,6 +180,10 @@ Metadata:
       PrometheusIntegration:
         default: Prometheus integration
 Parameters:
+  EKSNodeSecurityGroup:
+    Description: EKS Node Security Group
+    Type: String
+    Default: ""
   KeyPairName:
     Description: Name of an existing key pair, which allows you
       to securely connect to your instance after it launches.
