all control panel reach worker node

--- a/templates/nested/amazon-eks/submodules/amazon-eks-nodegroup/templates/amazon-eks-nodegroup.template.yaml
+++ b/templates/nested/amazon-eks/submodules/amazon-eks-nodegroup/templates/amazon-eks-nodegroup.template.yaml
@@ -407,6 +407,18 @@ Resources:
           - 2AZDeployment
           - [ !Ref Subnet1ID, !Ref Subnet2ID ]
           - [ !Ref Subnet1ID ]
+
+  EKSNodeSecurityGroupIngress:
+    DependsOn: EksClusterSecurityGroupId
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Allow control plane SG members to access worker node
+      GroupId: !Ref NodeSecurityGroupId
+      SourceSecurityGroupId: !Ref EksClusterSecurityGroupId
+      IpProtocol: -1
+      FromPort: -1
+      ToPort: -1
+
   NodeLaunchTemplate:
     Type: AWS::EC2::LaunchTemplate
     Condition: CreateNodeGroup
