dropdown for PrivateSubnet2ID

--- a/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
+++ b/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
@@ -217,6 +217,7 @@ Parameters:
       Type: "AWS::EC2::Subnet::Id"
       Default: "subnet-1111"
     PrivateSubnet2ID: 
+      Type: "AWS::EC2::Subnet::Id"
       Type: String
       Default: "subnet-2222"
     PrivateSubnet3ID:
