--- a/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
+++ b/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
@@ -939,6 +939,18 @@ Resources:
           KOTSUserPassword:
             Fn::Sub: "{{resolve:secretsmanager:${KotsSecret}::password}}"
           RemoveTempResources: !Ref RemoveTempResources
+          PrometheusIntegration: !Ref PrometheusIntegration
+
+    PrometheusStack:
+      Metadata:
+        DependsOn:
+          - !Ref AdminStack
+      Condition: EnablePrometheus
+      Type: AWS::CloudFormation::Stack
+      Properties:
+        TemplateURL: !Sub "https://${TemplateBucketName}.s3.amazonaws.com/${Environment}/templates/nested/amazon-eks/submodules/eks-prometheus/templates/eks-prometheus.template.yaml"
+        Parameters:
+          KubeClusterName: !Sub "${AWS::StackName}"
 
 
     PrivateLinkStack:
