no need to create prometheus namespace, the helm seems take care of that

--- a/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
+++ b/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
@@ -944,7 +944,8 @@ Resources:
     PrometheusStack:
       Metadata:
         DependsOn:
-          - !Ref AdminStack
+          #- !Ref AdminStack
+          - !Ref EKSClusterStack
       Condition: EnablePrometheus
       Type: AWS::CloudFormation::Stack
       Properties:
