add tag aws:eks:cluster-name,${AWS::StackName} to EKS node sg

--- a/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
+++ b/templates/datahub-deployment-v2-existing-vpc-2-subnets.yaml
@@ -683,6 +683,8 @@ Resources:
         Tags:
           - Key: Name
             Value: !Sub "${AWS::StackName}-Node-SG"
+          - Key: aws:eks:cluster-name
+            Value: !Sub "${AWS::StackName}"
           - Key: !Sub "kubernetes.io/cluster/${AWS::StackName}"
             Value: owned
 
