apikey missing permission secretsmanager:UpdateSecret, updated python-jwt.tar.gz

--- a/templates/nested/amazon-eks/templates/amazon-eks-provisioning-node-iam.yaml
+++ b/templates/nested/amazon-eks/templates/amazon-eks-provisioning-node-iam.yaml
@@ -106,6 +106,7 @@ Resources:
                   - secretsmanager:GetSecretValue
                   - secretsmanager:DescribeSecret
                   - secretsmanager:TagResource
+                  - secretsmanager:UpdateSecret
                 #Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${Environment}/${EksClusterName}/*",
                 Resource: "*"
                 Effect: Allow
